--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>rpc-grpc-demo</module>
+        <module>rpc-grpc-api</module>
+        <module>rpc-grpc-client</module>
+        <module>rpc-grpc-server</module>
     </modules>
     <properties>
         <java.version>17</java.version>
@@ -23,7 +26,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
